<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TuTurismo Neiva</string>
    <string name="mision">Mission</string>
    <string name="vision">Vision</string>
    <string name="textoMision">Promote the appropriation of Neivan culture through its tourist sites and monuments, gathering and sharing the history behind each of them, their importance, how many there are, which are the most visited, and which have been forgotten.</string>
    <string name="textoVision">Become a nationally recognized website for the accurate information we provide to our users, presenting innovative marketing strategies and ensuring stable tourism activity, promoting the social and economic sector of the city.</string>
    <string name="nombre">Full Name</string>
    <string name="correo">Email</string>
    <string name="cambiarcontraseña">Change Password</string>
    <string name="idioma">Language</string>
    <string name="modoOscuro">Dark Mode</string>
    <string name="contacto">Contact</string>
    <string name="nosotros">About Us</string>
    <string name="ayuda">Help</string>
    <string name="cerrarSesion">Sign Out</string>
    <string name="contraseña">Password</string>
    <string name="confirmarContraseña">Confirm Password</string>
    <string name="ingresar">Sign In</string>
    <string name="olvidarContra">Forgot Your Password?</string>
    <string name="primervezregi">Is this your first time on our page? Register</string>
    <string name="iniciaSesión">Sign In</string>
    <string name="registrase">Register</string>
    <string name="invitado">Guest</string>
    <string name="masdenosotros">Are you interested in uploading your company\'s content with us?</string>
    <string name="ingresaDatosPer">Enter your personal data</string>
    <string name="eligetuidioma">Choose your language</string>
    <string name="español">Spanish</string>
    <string name="ingles">English</string>
    <string name="iniciaInvitado">Sign in as guest</string>
    <string name="nombreUsuario">Choose a username</string>
    <string name="continuar">Continue</string>
    <string name="olvidarContraPregunta">Forgot your password?</string>
    <string name="avisoOlvidarContra">Please enter your email address. We will send you instructions to reset your password.</string>
    <string name="ingresaTuCorreo">Enter your email address</string>
    <string name="recuperarContra">Recover Password</string>
    <string name="contactanos">Contact Us</string>
    <string name="trabajemosJun">Let\'s work together!</string>
    <string name="mensajeContac">If you need more information about our page or have any questions, please contact us.</string>
    <string name="mensajeEmpresa">Would you like to upload content about your company with us?</string>
    <string name="sitios">Tourist Sites</string>
    <string name="monumentos">Monuments</string>
    <string name="misSitios">My Sites</string>
    <string name="guardar">Save</string>
    <string name="inicio">Home</string>
    <string name="ajustes">Settings</string>
    <string name="tituloCambiarContra">Change Password</string>
    <string name="mensajeCambiarContra">Make sure to choose a strong password to protect your account from unauthorized access.</string>
    <string name="contraActual">Current password</string>
    <string name="contraNueva">New password</string>
    <string name="contraNuevaConfirm">Confirm new password</string>
    <string name="masDetalles">More details</string>
    <string name="descripcion">Description</string>
    <string name="usuaNoEncontrado">User not found</string>
    <string name="correctoInicioSesion">You have successfully logged in</string>
    <string name="correctoRegistro">Registration successful!</string>
    <string name="errorRegistro">Registration failed. Please try again</string>
    <string name="nombre_no_valido">The name is not valid</string>
    <string name="correo_no_valido">The email is not valid</string>
    <string name="contra_longitud">The password must be between 8 and 25 characters.</string>
    <string name="contra_no_valida">Invalid password.</string>
    <string name="contrasenas_no_coinciden">Passwords do not match.</string>
    <string name="campo_obligatorio">This is a required field.</string>
    <string name="longitud_invalida">The field must be between 3 and 59 characters.</string>
    <string name="confirmCorreoElectronico">Email Confirmation</string>
    <string name="confirm">Confirm</string>
    <string name="llenatodosloscampos">Please fill in all fields</string>
    <string name="actnopuedeserigualnueva">The current password cannot be the same as the new one</string>
    <string name="nocinciden">The new password and the confirmation do not match</string>
    <string name="errorCorreoRegistro">Registration failed. The email is already registered.</string>
    <string name="alertataCambioExitoso">Your password has been successfully changed. Please log in with your new password.</string>
    <string name="textoCambioCorreoElectronico">Please enter your email address below to confirm your identity. This is necessary to proceed with changing your password.</string>
</resources>
