<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_0240806133254103"
    tools:context=".nosotros">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="319dp"
            android:layout_height="503dp"
            android:backgroundTint="@color/cards"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="45sp"
                android:text="@string/mision"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                android:textSize="28dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="43dp"
                android:layout_marginTop="93dp"
                android:justificationMode="inter_word"
                android:text="@string/textoMision"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="260dp"
                android:text="@string/vision"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                android:textSize="28dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="43dp"
                android:layout_marginTop="308dp"
                android:justificationMode="inter_word"
                android:text="@string/textoVision"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                android:textSize="15sp" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnMision"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="60dp"
            android:layout_height="57dp"
            app:icon="@drawable/arrow_left_circle_svgrepo_com"
            app:iconSize="35dp"
            app:iconTint="@color/naranja"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.01" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>