<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:background="@drawable/_0240806133254103"
    tools:context=".registrarse">

    <androidx.cardview.widget.CardView
        android:layout_width="330dp"
        android:layout_height="460dp"
        android:backgroundTint="@color/cards"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="32dp"
            android:text="@string/ingresaDatosPer"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lblNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="123dp"
            android:text="@string/nombre"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="245dp"
            android:layout_height="30dp"
            android:layout_marginLeft="43dp"
            android:layout_marginTop="146dp"
            android:background="@drawable/plain_text"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lblCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="183dp"
            android:text="@string/correo"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtCorreo"
            android:layout_width="245dp"
            android:layout_height="30dp"
            android:layout_marginLeft="43dp"
            android:layout_marginTop="206dp"
            android:background="@drawable/plain_text"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lblContra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="245dp"
            android:text="@string/contraseña"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtContra"
            android:layout_width="245dp"
            android:layout_height="30dp"
            android:layout_marginLeft="43dp"
            android:layout_marginTop="266dp"
            android:background="@drawable/plain_text"
            android:inputType="textPassword"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lblConfirmContra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="303dp"
            android:text="@string/confirmarContraseña"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtConfirmContra"
            android:layout_width="245dp"
            android:layout_height="30dp"
            android:layout_marginLeft="43dp"
            android:layout_marginTop="326dp"
            android:background="@drawable/plain_text"
            android:inputType="textPassword"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnRegistrar"
            style="@style/Widget.Material3.Button"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="385dp"
            android:backgroundTint="@color/naranja"
            android:text="@string/registrase"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold" />


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnVolverInicio2"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="58dp"
        android:layout_height="49dp"
        app:icon="@drawable/arrow_left_circle_svgrepo_com"
        app:iconGravity="textStart"
        app:iconSize="35dp"
        app:iconTint="@color/naranja"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />

</androidx.constraintlayout.widget.ConstraintLayout>