<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_0240806133254103"
    tools:context=".olvidar_contra">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="330dp"
        android:layout_height="360dp"
        android:backgroundTint="@color/cards"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="40dp"
            android:text="@string/olvidarContraPregunta"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="32dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="130dp"
            android:text="@string/avisoOlvidarContra"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="200dp"
            android:text="@string/ingresaTuCorreo"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="245dp"
            android:layout_height="35dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="225dp"
            android:background="@drawable/plain_text"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.Material3.Button"
            android:layout_width="189dp"
            android:layout_height="40dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="275dp"
            android:backgroundTint="@color/naranja"
            android:text="@string/recuperarContra"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/volverInicioSesion"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="59dp"
        android:layout_height="51dp"
        android:text="Button"
        app:icon="@drawable/arrow_left_circle_svgrepo_com"
        app:iconGravity="textStart"
        app:iconSize="35dp"
        app:iconTint="@color/naranja"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

</androidx.constraintlayout.widget.ConstraintLayout>