<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"
    android:backgroundTint="@color/backgroud"
    tools:context=".confirmCorreo">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/backgroud"
        tools:context=".olvidarContra">

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="90"
            android:rotationX="360"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.74"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.783"
            app:srcCompat="@drawable/ellipse_4" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.301"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.240"
            app:srcCompat="@drawable/circle_svgrepo_com__1_" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.949"
            app:srcCompat="@drawable/ellipse_4" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotationY="180"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.061"
            app:srcCompat="@drawable/ellipse_4" />

        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.946"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.142"
            app:srcCompat="@drawable/ellipse_5" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.867"
            app:srcCompat="@drawable/ellipse_5" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="330dp"
            android:layout_height="360dp"
            android:backgroundTint="@color/cards"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="40dp"
                android:text="@string/confirmCorreoElectronico"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                android:textSize="32dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="122dp"
                android:text="@string/textoCambioCorreoElectronico"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="200dp"
                android:text="@string/ingresaTuCorreo"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="245dp"
                android:layout_height="35dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="225dp"
                android:background="@drawable/plain_text"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="#FFFFFF"
                android:textColorLink="#FFFFFF" />

            <Button
                android:id="@+id/btnConfirm"
                style="@style/Widget.Material3.Button"
                android:layout_width="245dp"
                android:layout_height="40dp"
                android:layout_marginLeft="47dp"
                android:layout_marginTop="275dp"
                android:backgroundTint="@color/naranja"
                android:text="@string/confirm"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/volverConfirmCorreo"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="59dp"
            android:layout_height="51dp"
            android:text="Button"
            app:icon="@drawable/arrow_left_circle_svgrepo_com"
            app:iconGravity="textStart"
            app:iconSize="35dp"
            app:iconTint="@color/naranja"
            app:layout_constraintBottom_toTopOf="@+id/cardView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.117" />

        <LinearLayout
            android:layout_width="351dp"
            android:layout_height="159dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="31dp"
            tools:layout_editor_absoluteY="15dp"></LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>