<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud"
    android:backgroundTint="@color/backgroud"
    tools:context=".idioma">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView52"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="223dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.212"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.675"
            app:srcCompat="@drawable/circle_svgrepo_com__1_" />

        <ImageView
            android:id="@+id/imageView53"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.962"
            app:srcCompat="@drawable/ellipse_4" />

        <ImageView
            android:id="@+id/imageView54"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotationY="180"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.994"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.067"
            app:srcCompat="@drawable/ellipse_4" />

        <ImageView
            android:id="@+id/imageView55"
            android:layout_width="15dp"
            android:layout_height="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.939"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.146"
            app:srcCompat="@drawable/ellipse_5" />

        <ImageView
            android:id="@+id/imageView56"
            android:layout_width="15dp"
            android:layout_height="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.085"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.881"
            app:srcCompat="@drawable/ellipse_5" />

        <androidx.cardview.widget.CardView
            android:layout_width="278dp"
            android:layout_height="232dp"
            android:backgroundTint="@color/cards"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="29dp"
                android:layout_height="29dp"
                android:layout_marginLeft="38dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/world_svgrepo_com_1" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="29dp"
                android:text="@string/eligetuidioma"
                android:textColor="@color/white"
                android:textColorLink="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupIdioma"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="114dp"
                android:theme="@style/RadioButtonNaranja">

                <RadioButton
                    android:id="@+id/radioEspañol"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:checked="true"
                    android:text="@string/español"
                    android:textColor="@color/white"
                    android:textColorLink="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioIngles"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:checked="false"
                    android:text="@string/ingles"
                    android:textColor="@color/white"
                    android:textColorLink="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RadioGroup>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/volverIdioma"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            app:icon="@drawable/arrow_left_circle_svgrepo_com"
            app:iconSize="35dp"
            app:iconTint="@color/naranja"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.002"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023"
            tools:ignore="NotSibling" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>